<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="l12.brainfriendly.networkconnection.ui.RegisterNoteActivity">

    <EditText
        android:id="@+id/tituloNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/tituloNotaHint"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/descripcionNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloNota"
        android:layout_margin="10dp"
        android:gravity="top"
        android:hint="@string/descripcionNotaHint"
        android:lines="10"
        android:textSize="16sp" />

    <Button
        android:id="@+id/grabarNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/grabarNotaLabel"
        android:textSize="16sp" />

</RelativeLayout>
